# note-taking-rs

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 0001_note_table.sql  0002_note_table.sql
backend/src/: app_state.rs  main.rs
backend/src/api/: mod.rs  notes.rs
backend/src/repository/: db.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/components/: mod.rs  note_component.rs
shared/: Cargo.toml
shared/src/models/: mod.rs  note.rs  note_tag.rs  tag.rs
