[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
dotenv = "0.15.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
actix-web = "4.3.1"
tokio = { version = "1.29.1", features = ["full"] }
actix-cors = "0.6.4"
