[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
leptos = { version = "0.4.6", features = ["csr"] }
reqwest = { version = "0.11.18", features = ["json"] }
